Add ABCI IB suuport

--- a/etc/singularity.conf.in
+++ b/etc/singularity.conf.in
@@ -119,6 +119,8 @@
 #bind path = /scratch
 bind path = /etc/localtime
 bind path = /etc/hosts
+bind path = /etc/libibverbs.d
+bind path = /local
 
 
 # USER BIND CONTROL: [BOOL]
